backend_start_check.txt
=== PM2 full list ===
ΓöîΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö¼ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÉ
Γöé id Γöé name                Γöé namespace   Γöé version Γöé mode    Γöé pid      Γöé uptime Γöé Γå║    Γöé status    Γöé cpu      Γöé mem      Γöé user     Γöé watching Γöé
Γö£ΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö╝ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöñ
Γöé 7  Γöé frontend            Γöé default     Γöé N/A     Γöé fork    Γöé 266005   Γöé 7m     Γöé 0    Γöé online    Γöé 0%       Γöé 56.8mb   Γöé root     Γöé disabled Γöé
Γöé 0  Γöé man2man-frontend    Γöé default     Γöé N/A     Γöé fork    Γöé 0        Γöé 0      Γöé 2197 Γöé stopped   Γöé 0%       Γöé 0b       Γöé root     Γöé disabled Γöé
Γöé 1  Γöé man2man-frontend    Γöé default     Γöé N/A     Γöé fork    Γöé 0        Γöé 0      Γöé 2221 Γöé stopped   Γöé 0%       Γöé 0b       Γöé root     Γöé disabled Γöé
ΓööΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓö┤ΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÇΓöÿ

=== Backend error log (last 20 lines) ===
at Module.require (node:internal/modules/cjs/loader:1289:19)
    at Hook._require.Module.require (/usr/lib/node_modules/pm2/node_modules/require-in-the-middle/index.js:101:39)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/var/www/man2man/backend/routes/adminRoutes.js:3:25)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
/var/www/man2man/backend/controllers/adminController.js:614
        const totalSelfDeposit = self_deposits[0]?.total || 0;
              ^

SyntaxError: Identifier 'totalSelfDeposit' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at Hook._require.Module.require (/usr/lib/node_modules/pm2/node_modules/require-in-the-middle/index.js:101:39)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/var/www/man2man/backend/routes/adminRoutes.js:3:25)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)

=== Port check (3000, 4000, 5000) ===
LISTEN 0      511                *:3000             *:*    users:(("next-server (v1",pid=266017,fd=18))

=== Looking for index.js in backend ===
/var/www/man2man/frontend/worker/index.js
/var/www/man2man/node_modules/kareem/index.js
/var/www/man2man/node_modules/axios/index.js
/var/www/man2man/node_modules/has-tostringtag/index.js
/var/www/man2man/node_modules/ms/index.js
/var/www/man2man/node_modules/follow-redirects/index.js
/var/www/man2man/node_modules/has-symbols/index.js
/var/www/man2man/node_modules/get-intrinsic/index.js
/var/www/man2man/node_modules/es-object-atoms/index.js
/var/www/man2man/node_modules/gopd/index.js
/var/www/man2man/node_modules/mpath/index.js
/var/www/man2man/node_modules/mime-db/index.js
/var/www/man2man/node_modules/tr46/index.js
/var/www/man2man/node_modules/es-errors/index.js
/var/www/man2man/node_modules/es-set-tostringtag/index.js
/var/www/man2man/node_modules/sift/index.js
/var/www/man2man/node_modules/asynckit/index.js
/var/www/man2man/node_modules/memory-pager/index.js
/var/www/man2man/node_modules/get-proto/index.js
/var/www/man2man/node_modules/proxy-from-env/index.js
/var/www/man2man/node_modules/mongoose/index.js
/var/www/man2man/node_modules/mime-types/index.js
/var/www/man2man/node_modules/call-bind-apply-helpers/index.js
/var/www/man2man/node_modules/es-define-property/index.js
/var/www/man2man/node_modules/function-bind/index.js
/var/www/man2man/node_modules/whatwg-url/index.js
/var/www/man2man/node_modules/ws/index.js
/var/www/man2man/node_modules/hasown/index.js
/var/www/man2man/node_modules/sparse-bitfield/index.js
